--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -80,6 +80,7 @@
 @labelColor: #777;
 @wellColor: rgba(203, 210, 217, 0.2);
 @wellBorderColor: #f1efef;
+@disabledColor: #bfc3c3;
 
 @inputHeight: 2.4em;
 
@@ -417,17 +418,12 @@ div.right-panel {
 #termsText.agreed {
   display: block;
 }
+#topTerms .well {
+  padding: 2em 1em 1em 1em;
+}
 #topTerms.hide-terms ~ #aboutForm {
   margin: 3em auto;
   min-height: 50vh;
-}
-#topTerms .custom-tou,
-#topTerms .custom-tou-text {
-  display: none;
-}
-
-#topTerms .custom-tou-text a {
-  text-decoration: underline;
 }
 #topTerms .terms-checkbox-container {
   margin-left: 2em;
@@ -442,6 +438,10 @@ div.right-panel {
     margin: 1em auto;
   }
   a.form-link {
+    text-decoration: underline;
+  }
+  .required-link {
+    font-weight: normal;
     text-decoration: underline;
   }
 }
@@ -564,13 +564,13 @@ div.right-panel {
     font-size: @smallBtnSize;
   }
   #next {
-    opacity: 1;
     width: 110px;
     max-width: 100%;
     margin-left: 0.2em;
   }
   #next:disabled {
-    opacity: 0.6;
+    background: @disabledColor;
+    border: 1px solid @disabledColor;
   }
   #next.open, #updateProfile.open {
     opacity: 1;
@@ -2778,6 +2778,11 @@ div.timezone-warning.text-warning {
     right:0;
     .btn {
       margin: 0 0 15px 15px;
+    }
+  }
+  #topTerms {
+    .terms-tick-box-text {
+      width: 96.5%;
     }
   }
   #patientListOptions,
