--- a/portal/templates/gil/macros.html
+++ b/portal/templates/gil/macros.html
@@ -4,7 +4,7 @@
           <figure class="footer__logo--truenth"></figure>
         </div>
         <ul class="nav-list">
-          <li class="nav-list__item"><a href="{{url_for('portal.landing')}}">{{_("Home")}}</a></li>
+          <li class="nav-list__item nav-list__item--home"><a href="{{url_for('portal.landing')}}">{{_("Home")}}</a></li>
           <li class="nav-list__item"><a href="{{url_for('portal.about')}}">{{_("About")}}</a></li>
           <li class="nav-list__item"><a class="decision-support-link" href="{{url_for('portal.decision_support')}}">{{_("Decision Support")}}</a></li>
           <li class="nav-list__item"><a class="symptom-tracker-link" href="{{url_for('portal.symptom_tracker')}}">{{_("Symptom Tracker")}}</a></li>
