--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -814,9 +814,38 @@ div.pull-right {
     }
   }
 }
-#userStatsContainer .indent {
-  padding: 0 2em !important;
+
+/* reporting dashboard styling */
+.nav-tabs.rd-nav>li.active>a, 
+.nav-tabs.rd-nav>li.active>a:focus, 
+.nav-tabs.rd-nav>li.active>a:hover {
+    background-color: #6f7984;
+    color: #FFF;
 }
+.rd-content-container {
+    min-height: 50vh;
+}
+.stats-container {
+    padding: 1em;
+    display: none;
+   .columns-right .btn {
+      padding: 0.6em;
+   }
+}
+.stats-container.active {
+   display: block;
+}
+.stats-info {
+    background-color: #F7F7F7;
+    padding: 1em;
+    margin: 1em auto;
+}
+.stats-table {
+  .filterControl .form-control {
+    font-weight: normal;
+  }
+}
+
 #loginEmailReminderText
 {
   margin-left: 8px;
