fix trans tags in initial queries template, css fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -492,14 +492,19 @@ div.right-panel {
   margin: 0.3em 0.5em 0 0;
 }
 .terms-tick-box-text {
-  width: 95%;
+  width: 96.5%;
   max-width: 100%;
   display: inline-block;
+}
+.website-consent-script {
+  .terms-tick-box-text {
+    width: 95%;
+  }
 }
 #termsCheckbox {
   width: 1000px;
   max-width: 100%;
-  margin-top: 2.5em;
+  margin-top: 2em;
   .display-view {
     font-weight: normal;
     display: none;
