remove one white space, forcing tests to re-run `# Please enter the commit message for your changes. Lines starting

--- a/portal/templates/reporting_dashboard.html
+++ b/portal/templates/reporting_dashboard.html
@@ -153,8 +153,7 @@
                    data-filter-control="true"
                    data-show-export="true"
                    data-export-data-type="all"
-                   data-show-columns="true"
-            >
+                   data-show-columns="true">
                 <thead>
                 <tr>
                     <th data-field="intervention_name" data-sortable="true" data-filter-control="select" data-width="40%">{{ _("Intervention") }}</th>
