--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -896,6 +896,12 @@
                         undefinedText: '--',
                         columns: [
                             {
+                                field: 'contributor',
+                                title: '{{_("Type")}}',
+                                searchable: true,
+                                sortable: true
+                            },
+                            {
                                 field: 'filename',
                                 title: '{{_("Report Name")}}',
                                 searchable: true,
